--- a/public/index.html
+++ b/public/index.html
@@ -21,11 +21,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <style>
+    <!-- <style>
       * {
         font-family: "Inter", sans-serif;
       }
-    </style>
+    </style> -->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -35,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>FitClub</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
